fix: B-Tree to B*Tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,4 +149,6 @@ add_executable(algorithm
         src/tree/impl/BTreeNode_impl.h
         src/tree/BTree.h
         src/tree/impl/BTreeElement_impl.h
+        src/objects/MetaObject.h
+        src/objects/BytesObject.h
 )
